--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" /> -->
   <link rel="stylesheet" href="../public/css/tailwind.output.css" />
   <script defer src="https://unpkg.com/alpinejs@3.10.2/dist/cdn.min.js"></script>
   <script src="../public/js/init-alpine.js"></script>
