--- a/views/layouts/dashboard.hbs
+++ b/views/layouts/dashboard.hbs
@@ -6,7 +6,7 @@
       name='viewport'
       content='width=device-width, initial-scale=1.0'
     />
-    <title>Login</title>
+    <title>Dashboard</title>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" /> -->
     <link rel='stylesheet' href='/css/tailwind.output.css' />
     <script
