--- a/views/login-main.hbs
+++ b/views/login-main.hbs
@@ -97,13 +97,7 @@
       <div class='h-32 md:h-auto md:w-1/2'>
         <img
           aria-hidden='true'
-          class='object-cover w-full h-full dark:hidden'
-          src='../assets/img/login-office.jpeg'
-          alt='Office'
-        />
-        <img
-          aria-hidden='true'
-          class='hidden object-cover w-full h-full dark:block'
+          class='object-cover w-full h-full block'
           src='http://placehold.jp/1423x800.png'
           alt='Office'
         />
