--- a/views/dashboard-main.hbs
+++ b/views/dashboard-main.hbs
@@ -140,16 +140,21 @@
       <label class='block text-sm'>
         <span class='text-gray-700 dark:text-gray-400'>Address</span>
         <input
+          name='address'
+          id='address'
+          type='text'
+          data-rules='["required"]'
           class='block mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
         />
       </label>
 
       <button
         class='block px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
-        href='../index.html'
+        @click='fetchNFTs(address)'
       >
         Add Collection
       </button>
+
     </div>
 
   </div>
