--- a/views/login-main.hbs
+++ b/views/login-main.hbs
@@ -72,7 +72,6 @@
           </button>
 
           <!-- <hr class="my-8" />
-
             
             <button
               class="flex items-center justify-center w-full px-4 py-2 text-sm font-medium leading-5 text-white text-gray-700 transition-colors duration-150 border border-gray-300 rounded-lg dark:text-gray-400 active:bg-transparent hover:border-gray-500 focus:border-gray-500 active:text-gray-500 focus:outline-none focus:shadow-outline-gray">
@@ -97,13 +96,7 @@
       <div class='h-32 md:h-auto md:w-1/2'>
         <img
           aria-hidden='true'
-          class='object-cover w-full h-full dark:hidden'
-          src='../assets/img/login-office.jpeg'
-          alt='Office'
-        />
-        <img
-          aria-hidden='true'
-          class='hidden object-cover w-full h-full dark:block'
+          class='object-cover w-full h-full block'
           src='http://placehold.jp/1423x800.png'
           alt='Office'
         />
