--- a/views/register-main.hbs
+++ b/views/register-main.hbs
@@ -9,13 +9,19 @@
       <div
         class='flex items-center justify-center p-6 sm:p-12 md:w-1/2'
       >
-        <div class='w-full'>
+
+        <form
+          id='register'
+          class='w-full'
+          x-data='register'
+          action=''
+        >
           <h1
             class='text-xl font-semibold text-gray-700 dark:text-gray-200'
           >
             Create account
           </h1>
-          <p class='mb-4'>
+          <p>
             <a
               class='text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline'
               href='/login'
@@ -24,57 +30,63 @@
             </a>
           </p>
 
-          <label class='block text-sm'>
-            <span
-              class='text-gray-700 dark:text-gray-400'
-            >Email</span>
-            <input
-              class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
-            />
-          </label>
-          <label class='block mt-4 text-sm'>
-            <span
-              class='text-gray-700 dark:text-gray-400'
-            >Password</span>
-            <input
-              class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
-              type='password'
-            />
-          </label>
-          <label class='block mt-4 text-sm'>
-            <span class='text-gray-700 dark:text-gray-400'>
-              Confirm password
-            </span>
-            <input
-              class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
-              type='password'
-            />
-          </label>
+          <label
+            class='mt-4 block text-sm text-gray-700 dark:text-gray-400'
+            for='email'
+          >Email</label>
+          <input
+            class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
+            name='email'
+            type='email'
+            id='email'
+            data-rules='["required","email"]'
+          />
 
-          <div class='flex mt-6 text-sm'>
-            <label class='flex items-center dark:text-gray-400'>
-              <input
-                type='checkbox'
-                class='text-purple-600 form-checkbox focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray'
-              />
-              <span class='ml-2'>
-                I agree to the
-                <a href='#'>privacy policy</a>
-              </span>
-            </label>
-          </div>
+          <label
+            class='mt-4 block text-sm text-gray-700 dark:text-gray-400'
+            for='username'
+          >Username</label>
+          <input
+            class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
+            name='username'
+            id='username'
+            type='text'
+            data-rules='["required"]'
+          />
 
-          <!-- You should use a button here, as the anchor is only used for the example  -->
-          <a
+          <label
+            class='mt-4 block text-sm text-gray-700 dark:text-gray-400'
+            for='password'
+          >Password</label>
+          <input
+            class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
+            name='password'
+            type='password'
+            id='password'
+            data-rules='["required","minimum:8"]'
+          />
+
+          <label
+            class='mt-4 block text-sm text-gray-700 dark:text-gray-400'
+            for='passwordConf'
+          >Confirm Password</label>
+          <input
+            class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
+            name='passwordConf'
+            type='password'
+            id='passwordConf'
+            data-rules='["required","minimum:8"]'
+          />
+
+          <input
+            type='submit'
             class='block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
-            href='./login.html'
-          >
-            Create account
-          </a>
+          />
+        </form>
 
-          <!-- <hr class="my-8" /> -->
+        <!-- <hr class="my-8" /> -->
 
-          <!-- <button
+        <!-- <button
               class="flex items-center justify-center w-full px-4 py-2 text-sm font-medium leading-5 text-white text-gray-700 transition-colors duration-150 border border-gray-300 rounded-lg dark:text-gray-400 active:bg-transparent hover:border-gray-500 focus:border-gray-500 active:text-gray-500 focus:outline-none focus:shadow-outline-gray">
               <svg class="w-4 h-4 mr-2" aria-hidden="true" viewBox="0 0 24 24" fill="currentColor">
                 <path
@@ -91,7 +103,6 @@
               Twitter
             </button> -->
 
-        </div>
       </div>
 
       <div class='h-32 md:h-auto md:w-1/2'>
