--- a/views/login-main.hbs
+++ b/views/login-main.hbs
@@ -9,13 +9,19 @@
       <div
         class='flex items-center justify-center p-6 sm:p-12 md:w-1/2'
       >
-        <div class='w-full'>
+
+        <form
+          id='register'
+          class='w-full'
+          x-data='register'
+          action=''
+        >
           <h1
             class='text-xl font-semibold text-gray-700 dark:text-gray-200'
           >
             Login to your account
           </h1>
-          <p class='mb-4'>
+          <p>
             <a
               class='text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline'
               href='/register'
@@ -24,23 +30,37 @@
             </a>
           </p>
 
-          <label class='block text-sm'>
-            <span
-              class='text-gray-700 dark:text-gray-400'
-            >Email</span>
-            <input
-              class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
-            />
-          </label>
-          <label class='block mt-4 text-sm'>
-            <span
-              class='text-gray-700 dark:text-gray-400'
-            >Password</span>
-            <input
-              class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
-              type='password'
-            />
-          </label>
+          <label
+            class='mt-4 block text-sm text-gray-700 dark:text-gray-400'
+            for='email'
+          >Email</label>
+          <input
+            class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
+            name='email'
+            type='email'
+            id='email'
+            data-rules='["required","email"]'
+          />
+
+          <label
+            class='mt-4 block text-sm text-gray-700 dark:text-gray-400'
+            for='password'
+          >Password</label>
+          <input
+            class='block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input'
+            name='password'
+            type='password'
+            id='password'
+            data-rules='["required","minimum:8"]'
+          />
+
+          <input
+            type='submit'
+            class='block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
+          />
+        </form>
+
+        {{! 
 
           <div class='mt-3 flex justify-between'>
             <div>
@@ -62,16 +82,9 @@
                 Forgot your password?
               </a>
             </div>
-          </div>
+          </div> }}
 
-          <button
-            class='block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
-            href='../index.html'
-          >
-            Log in
-          </button>
-
-          <!-- <hr class="my-8" />
+        <!-- <hr class="my-8" />
 
             
             <button
@@ -91,7 +104,6 @@
               Twitter
             </button> -->
 
-        </div>
       </div>
 
       <div class='h-32 md:h-auto md:w-1/2'>
@@ -99,7 +111,6 @@
           aria-hidden='true'
           class='object-cover w-full h-full block'
           src='http://placehold.jp/1423x800.png'
-          alt='Office'
         />
       </div>
 
