--- a/views/login-main.hbs
+++ b/views/login-main.hbs
@@ -10,12 +10,7 @@
         class='flex items-center justify-center p-6 sm:p-12 md:w-1/2'
       >
 
-        <form
-          id='register'
-          class='w-full'
-          x-data='register'
-          action=''
-        >
+        <form id='login' class='w-full' x-data='login' action=''>
           <h1
             class='text-xl font-semibold text-gray-700 dark:text-gray-200'
           >
