update routes and login/logout functionality

--- a/views/home-main.hbs
+++ b/views/home-main.hbs
@@ -28,6 +28,7 @@
           </button>
         </div>
       </div>
+    {{#unless loggedIn}}
       <div
         class='mt-3 sm:flex sm:justify-center w-full text-gray-600 dark:text-gray-300 lg:justify-start'
       >
@@ -39,6 +40,9 @@
             login</a>
           to your account</p>
       </div>
+      {{/unless}}
+    </div>
+
     </div>
     <div
       class='opacity-10 z-10 md:z-50 md:opacity-70 sm:text-center absolute lg:text-left transform w-full -right-10 -top-72 md:w-1/2'
