--- a/views/register-main.hbs
+++ b/views/register-main.hbs
@@ -11,10 +11,11 @@
       >
 
         <form
-          id='register'
+          id='registerForm'
           class='w-full'
-          x-data='register'
-          action=''
+          x-data='registerForm'
+          action='/api/user'
+          method='POST'
         >
           <h1
             class='text-xl font-semibold text-gray-700 dark:text-gray-200'
@@ -51,10 +52,6 @@
             name='username'
             id='username'
             type='text'
-            x-bind:class="{'invalid':username.errorMessage && username.blurred}"
-            @blur='blur'
-            @input='input'
-            data-rules='["required"]'
           />
 
           <label
@@ -66,7 +63,6 @@
             name='password'
             type='password'
             id='password'
-            data-rules='["required","minimum:8"]'
           />
 
           <label
@@ -78,15 +74,15 @@
             name='passwordConf'
             type='password'
             id='passwordConf'
-            data-rules='["required","minimum:8"]'
           />
 
-          <input
+          <button
             type='submit'
             id='loginBtn'
             @click='signupFormHandler'
             class='block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
-          />
+          ></button>
+
         </form>
 
         <!-- <hr class="my-8" /> -->
@@ -111,12 +107,12 @@
       </div>
 
       <div class='h-32 md:h-auto md:w-1/2'>
-        <img
+        {{! <img
           aria-hidden='true'
           class='object-cover w-full h-full dark:hidden'
           src='../assets/img/login-office.jpeg'
           alt='Office'
-        />
+        /> }}
         <img
           aria-hidden='true'
           class='hidden object-cover w-full h-full dark:block'
