add logout to home page

--- a/views/partials/home-header.hbs
+++ b/views/partials/home-header.hbs
@@ -15,6 +15,7 @@
       {{#if loggedIn}}
         <button
           id='logout'
+          @click='logout'
           class='text-purple-600 hover:text-purple-700 underline'
         >Logout</button>
       {{else}}
