add logo icon on homepage

--- a/views/partials/home-header.hbs
+++ b/views/partials/home-header.hbs
@@ -8,7 +8,7 @@
         <img
           class='h-10 w-auto mr-2'
           src='/img/vision.png'
-          alt='eye by freepik'
+          alt='vision by freepik'
         />
         <span class='text-white text-3xl font-bold'>ViewNFT</span>
       </a>
