--- a/views/partials/dashboard-header.hbs
+++ b/views/partials/dashboard-header.hbs
@@ -158,7 +158,7 @@
                 >
                   <img
                     class='object-cover w-8 h-8 rounded-full'
-                    src='../public/img/user.png'
+                    src='img/user.png'
                   />
                 </button>
                 <template x-if='isProfileMenuOpen'>
