add register page modal

--- a/views/register-main.hbs
+++ b/views/register-main.hbs
@@ -1,4 +1,4 @@
-<div
+<main
   class='flex items-center min-h-screen p-6 bg-gray-50 dark:bg-gray-900'
 >
   <div
@@ -10,13 +10,14 @@
         class='flex items-center justify-center p-6 sm:p-12 md:w-1/2'
       >
 
-        <form
+        <form id='registerForm' class='w-full' x-data='registerForm'>
+          {{! <form
           id='registerForm'
           class='w-full'
           x-data='registerForm'
           action='/api/user'
           method='POST'
-        >
+        > }}
           <h1
             class='text-xl font-semibold text-gray-700 dark:text-gray-200'
           >
@@ -81,7 +82,7 @@
             id='loginBtn'
             @click='signupFormHandler'
             class='block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
-          ></button>
+          >Register</button>
 
         </form>
 
@@ -123,4 +124,4 @@
 
     </div>
   </div>
-</div>
+</main>
