--- a/views/login-main.hbs
+++ b/views/login-main.hbs
@@ -56,12 +56,12 @@
               Forgot password?
             </a>
           </div>
-          <input
+          <button
             id='loginBtn'
             @click='loginFormHandler'
             type='submit'
             class='cursor-pointer block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
-          />
+          >Submit</button>
         </form>
 
         <hr class='my-8' />
