--- a/views/home-main.hbs
+++ b/views/home-main.hbs
@@ -51,35 +51,35 @@
         <div class='col-1'>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='http://placehold.jp/90x64.png' />
+              <img src='../public/img/hackers-steal-nfts-art-collector.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='http://placehold.jp/250x250.png' />
+              <img src='../public/img/nft_.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x250.png'
+                src='../public/img/merlin_184196631_939fb22d-b909-4205-99d9-b464fb961d32-mobileMasterAt3x.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x184.png'
+                src='../public/img/nft_1.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x350.png'
+                src='../public/img/nft_10.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x480.png'
+                src='../public/img/nft_11.jpg'
               />
             </div>
           </div>
@@ -92,35 +92,36 @@
         <div class='col-1'>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x480.png'
+                src='../public/img/nft_12.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x480.png'
+                src='../public/img/nft_13.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='http://placehold.jp/250x100.png' />
+              <img src='../public/img/nft_15.jpg'
+              />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x250.png'
+                src='../public/img/nft_16.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden w-64'>
-              <img src='http://placehold.jp/250x184.png' />
+              <img src='../public/img/nft_17.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x200.png'
+                src='../public/img/nft_18.jpg'
               />
             </div>
           </div>
@@ -129,35 +130,35 @@
         <div class='col-1'>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='http://placehold.jp/250x100.png' />
+              <img src='../public/img/nft_4.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x250.png'
+                src='../public/img/nft_5.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden w-64'>
-              <img src='http://placehold.jp/250x184.png' />
+              <img src='../public/img/nft_6.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x480.png'
+                src='../public/img/nft_7.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x200.png'
+                src='../public/img/nft_8.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='http://placehold.jp/250x480.png'
+                src='nft_9'
               />
             </div>
           </div>
