--- a/views/home-main.hbs
+++ b/views/home-main.hbs
@@ -51,35 +51,35 @@
         <div class='col-1'>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='../public/img/hackers-steal-nfts-art-collector.jpg' />
+              <img src='/img/hackers-steal-nfts-art-collector.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='../public/img/nft_.jpg' />
+              <img src='/img/nft_.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/merlin_184196631_939fb22d-b909-4205-99d9-b464fb961d32-mobileMasterAt3x.jpg'
+                src='/img/merlin_184196631_939fb22d-b909-4205-99d9-b464fb961d32-mobileMasterAt3x.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_1.jpg'
+                src='/img/nft_1.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_10.jpg'
+                src='/img/nft_10.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_11.jpg'
+                src='/img/nft_11.jpg'
               />
             </div>
           </div>
@@ -92,36 +92,36 @@
         <div class='col-1'>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_12.jpg'
+                src='/img/nft_12.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_13.jpg'
+                src='/img/nft_13.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='../public/img/nft_15.jpg'
+              <img src='/img/nft_15.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_16.jpg'
+                src='/img/nft_16.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden w-64'>
-              <img src='../public/img/nft_17.jpg' />
+              <img src='/img/nft_17.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_18.jpg'
+                src='/img/nft_18.jpg'
               />
             </div>
           </div>
@@ -130,29 +130,29 @@
         <div class='col-1'>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='../public/img/nft_4.jpg' />
+              <img src='/img/nft_4.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_5.jpg'
+                src='/img/nft_5.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden w-64'>
-              <img src='../public/img/nft_6.jpg' />
+              <img src='/img/nft_6.jpg' />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_7.jpg'
+                src='/img/nft_7.jpg'
               />
             </div>
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='../public/img/nft_8.jpg'
+                src='/img/nft_8.jpg'
               />
             </div>
           </div>
