--- a/views/register-main.hbs
+++ b/views/register-main.hbs
@@ -117,7 +117,7 @@
         <img
           aria-hidden='true'
           class='hidden object-cover w-full h-full dark:block'
-          src='../public/img/nft_register.jpeg'
+          src='/img/nft_register.jpeg'
           alt='Office'
         />
       </div>
