--- a/views/login-main.hbs
+++ b/views/login-main.hbs
@@ -125,7 +125,7 @@
         <img
           aria-hidden='true'
           class='object-cover w-full h-full block'
-          src='../public/img/nft_login.jpg'
+          src='/img/nft_login.jpg'
         />
       </div>
 
