updated to homepage text

--- a/views/password-reset-main.hbs
+++ b/views/password-reset-main.hbs
@@ -31,7 +31,7 @@
 
           <button
             class='block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple'
-            href='../index.html'
+            href='#'
           >
             Reset Password
           </button>
@@ -51,15 +51,8 @@
       <div class='h-32 md:h-auto md:w-1/2'>
         <img
           aria-hidden='true'
-          class='object-cover w-full h-full dark:hidden'
-          src='../assets/img/login-office.jpeg'
-          alt='Office'
-        />
-        <img
-          aria-hidden='true'
           class='hidden object-cover w-full h-full dark:block'
-          src='http://placehold.jp/1423x800.png'
-          alt='Office'
+          src='/img/nft_11.jpg'
         />
       </div>
 
