update all layouts to use local tailwind css file

--- a/views/layouts/home.hbs
+++ b/views/layouts/home.hbs
@@ -5,11 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NFT Collections Home Page</title>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet" /> -->
-    {{!-- <link rel="stylesheet" href="/css/tailwind.output.css" /> --}}
-    {{! SWITCH BACK TO LINKED CSS BEFORE POSTING }}
-    <script src='https://cdn.tailwindcss.com'></script>
+    <link rel="stylesheet" href="/css/tailwind.output.css" />
     <script defer src="https://unpkg.com/alpinejs@3.10.2/dist/cdn.min.js"></script>
     <script src="/js/init-alpine.js"></script>
 </head>
