--- a/views/home-main.hbs
+++ b/views/home-main.hbs
@@ -54,7 +54,7 @@
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'>
-              <img src='/img/nft_.jpg' />
+              <img src='/img/nft_0.jpg' />
             </div>
           </div>
           <div class='mb-4'>
@@ -82,8 +82,9 @@
             </div>
           </div>
           <div class='mb-4'>
-            <div class='overflow-hidden w-64'>
-
+            <div class='overflow-hidden'><img
+                src='/img/nft_9.jpg'
+              />
             </div>
           </div>
         </div>
@@ -156,7 +157,7 @@
           </div>
           <div class='mb-4'>
             <div class='overflow-hidden'><img
-                src='nft_9'
+                src='/img/nft_9.jpg'
               />
             </div>
           </div>
