fix dark mode and remove init-alpine

--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -7,7 +7,7 @@
       content='width=device-width, initial-scale=1.0'
     />
     <title>Login</title>
-    <link rel='stylesheet' href='/css/tailwind.output.css' />
+    <link rel='stylesheet' href='/css/output.css' />
     <script
       defer
       src='https://unpkg.com/alpinejs@3.10.2/dist/cdn.min.js'
