--- a/views/partials/home-header.hbs
+++ b/views/partials/home-header.hbs
@@ -10,7 +10,9 @@
           src='/img/vision.png'
           alt='vision by freepik'
         />
-        <span class='text-white text-3xl font-bold'>ViewNFT</span>
+        <span
+          class='dark:text-white text-3xl font-bold text-gray-700'
+        >ViewNFT</span>
       </a>
     </div>
 
