--- a/views/partials/dashboard-nav.hbs
+++ b/views/partials/dashboard-nav.hbs
@@ -3,11 +3,13 @@
   class='z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0'
 >
   <div class='py-4 text-gray-500 dark:text-gray-400'>
-    <a
-      class='ml-6 text-lg font-bold text-gray-800 dark:text-gray-200'
-      href='#'
-    >
-      Logo &amp; Title
+    <a href='/' class='flex flex-row items-center'>
+      <img
+        class='h-10 w-auto mr-2'
+        src='/img/vision.png'
+        alt='vision by freepik'
+      />
+      <span class='text-white text-3xl font-bold'>ViewNFT</span>
     </a>
     <ul class='mt-6'>
       <li class='relative px-6 py-3'>
