update html tag for dark mode

--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -1,4 +1,4 @@
-<html :class="{ 'theme-dark': dark }" x-data='data()' lang='en'>
+<html lang='en' class='dark'>
 
   <head>
     <meta charset='UTF-8' />
