--- a/views/layouts/password-reset.hbs
+++ b/views/layouts/password-reset.hbs
@@ -1,4 +1,4 @@
-<html :class="{ 'theme-dark': dark }" x-data='data()' lang='en'>
+<html lang='en' class='dark'>
 
   <head>
     <meta charset='UTF-8' />
