--- a/views/home-main.hbs
+++ b/views/home-main.hbs
@@ -75,14 +75,9 @@
               />
             </div>
           </div>
+
           <div class='mb-4'>
-            <div class='overflow-hidden'><img
-                src='/img/nft_11.jpg'
-              />
-            </div>
-          </div>
-          <div class='mb-4'>
-            <div class='overflow-hidden'><img
+            <div class='overflow-hidden w-64'><img
                 src='/img/nft_9.jpg'
               />
             </div>
@@ -114,12 +109,12 @@
             </div>
           </div>
           <div class='mb-4'>
-            <div class='overflow-hidden w-64'>
+            <div class='overflow-hidden'>
               <img src='/img/nft_17.jpg' />
             </div>
           </div>
           <div class='mb-4'>
-            <div class='overflow-hidden'><img
+            <div class='overflow-hidden w-64'><img
                 src='/img/nft_18.jpg'
               />
             </div>
@@ -139,7 +134,7 @@
             </div>
           </div>
           <div class='mb-4'>
-            <div class='overflow-hidden w-64'>
+            <div class='overflow-hidden'>
               <img src='/img/nft_6.jpg' />
             </div>
           </div>
@@ -156,7 +151,7 @@
             </div>
           </div>
           <div class='mb-4'>
-            <div class='overflow-hidden'><img
+            <div class='overflow-hidden w-64'><img
                 src='/img/nft_9.jpg'
               />
             </div>
